--- a/pod.yaml
+++ b/pod.yaml
@@ -9,7 +9,7 @@ spec:
     - name: myapp
       image: nginx
       ports:
-        - containerPort: 8000
+        - containerPort: 80
       resources:
         requests:
           memory: "64Mi"
@@ -17,7 +17,18 @@ spec:
         limits:
           memory: "128Mi"
           cpu: "500m"
-  tolerations:
-    - key: "CriticalAddonsOnly"
-      operator: "Exists"
-      effect: "NoSchedule" 
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: myservice
+spec:
+  type: LoadBalancer
+  selector:
+    app: myapp
+  ports:
+    - name: http
+      port: 80
+      targetPort: 80
+
+  
