--- a/pod.yaml
+++ b/pod.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: mypod
+  namespace: default
   labels:
     app: myapp
 spec:
@@ -10,25 +11,4 @@ spec:
       image: nginx
       ports:
         - containerPort: 80
-      resources:
-        requests:
-          memory: "64Mi"
-          cpu: "250m"
-        limits:
-          memory: "128Mi"
-          cpu: "500m"
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: myservice
-spec:
-  type: LoadBalancer
-  selector:
-    app: myapp
-  ports:
-    - name: http
-      port: 80
-      targetPort: 80
-
   
