--- a/service.yaml
+++ b/service.yaml
@@ -2,13 +2,16 @@ apiVersion: v1
 kind: Service
 metadata:
   name: myservice
+  namespace: default
 spec:
-  type: LoadBalancer
+  #type: LoadBalancer
+  type: NodePort
   selector:
     app: myapp
   ports:
     - name: http
       port: 80
       targetPort: 80
+      nodePort: 30007
 
   
